Add search endpoint for device meta
